--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,12 +2,7 @@
 
 .footerLinkWrapper {
 	font-size: 12px;
-	margin:7rem 0 25px 0px;
-	right: 0;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	margin: 0 auto 2rem;
+	margin:0 0 25px 0;
 
  	ul{
 		padding: 0;
